Huawei: post-review fixes #8